# snivy

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  MODDING.md  README.md  snivy.rc
.github/workflows/: build.yml
build-web/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  index.html  index.js
cmake/: copy_resources.cmake  create_index_zip.cmake
include/: stb_image.h
include/glad/: glad.cpp  glad.h
src/: camera.cpp  camera.h  canvas.cpp  canvas.h  canvas.hpp  character.cpp  character.h  cursor.cpp  cursor.h  game_data.h  game_data.hpp  item.cpp  item.h  item.hpp  loader.cpp  loader.h  loader.hpp  log.cpp  log.hpp  main.cpp  resources.cpp  resources.h  resources.hpp  state.cpp  state.h  state.hpp  types.hpp
src/entity/: actor.cpp  actor.hpp  character.cpp  character.hpp  cursor.cpp  cursor.hpp  item.cpp  item.hpp
src/resource/: actor.cpp  actor.h  anm2.cpp  anm2.h  audio.cpp  audio.h  audio.hpp  dialogue.cpp  dialogue.h  font.cpp  font.h  font.hpp  shader.cpp  shader.h  texture.cpp  texture.h  texture.hpp
src/resource/xml/: animation_entry.cpp  animation_entry.hpp  anm2.cpp  anm2.hpp  area.cpp  area.hpp  character.cpp  character.hpp  character_preview.cpp  character_preview.hpp  cursor.cpp  cursor.hpp  dialogue.cpp  dialogue.hpp  item.cpp  item.hpp  menu.cpp  menu.hpp  play.cpp  play.hpp  save.cpp  save.hpp  settings.cpp  settings.hpp  sound_entry.cpp  sound_entry.hpp  util.cpp  util.hpp
src/state/: configuration.cpp  configuration.hpp  main.cpp  main.hpp  play.cpp  select.cpp  select.hpp
src/state/main/: area_manager.cpp  area_manager.hpp  character_manager.cpp  character_manager.hpp  chat.cpp  chat.hpp  cheats.cpp  cheats.hpp  debug.cpp  debug.hpp  info.cpp  info.hpp  inventory.cpp  inventory.hpp  item_manager.cpp  item_manager.hpp  menu.cpp  menu.hpp  play.cpp  play.hpp  stats.cpp  stats.hpp  text.cpp  text.hpp  toasts.cpp  toasts.hpp  tools.cpp  tools.hpp  world.cpp  world.hpp
src/state/select/: characters.cpp  characters.hpp  info.cpp  info.hpp  preview.cpp  preview.hpp
src/util/: color.hpp  imgui.cpp  imgui.hpp  imgui_.cpp  imgui_.h  interact_type.hpp  map_.h  math.cpp  math.hpp  math_.cpp  math_.h  measurement.hpp  physfs.cpp  physfs.hpp  preferences.cpp  preferences.hpp  string.cpp  string.hpp  string_.hpp  time.cpp  time.hpp  unordered_map.hpp  unordered_map_.hpp  vector.hpp  vector_.h  web_filesystem.cpp  web_filesystem.hpp  working_directory.cpp  working_directory.hpp  xml_.cpp  xml_.h
src/util/imgui/: input_int_ex.cpp  input_int_ex.hpp  style.cpp  style.hpp  widget.cpp  widget.hpp  window_slide.cpp  window_slide.hpp
src/window/: chat.cpp  chat.hpp  info.cpp  info.hpp  inventory.cpp  inventory.h  inventory.hpp  main_menu.cpp  main_menu.h  play.cpp  play.h  stats.cpp  stats.h  text.cpp  text.h
web/: index.html
